# SPDX-FileCopyrightText: 2025 VTT Technical Research Centre of Finland Ltd
# SPDX-License-Identifier: AGPL-3.0-or-later

# Unit tests organized by component
add_subdirectory(core)
add_subdirectory(fft)
add_subdirectory(models)
add_subdirectory(field_modifiers)
add_subdirectory(field_ops)
add_subdirectory(simulator)
add_subdirectory(ui)
add_subdirectory(io)
